<resources>
    <string name="app_name">FoodFinders</string>
    <string name="title_activity_restaurantmaps">FoodFinders</string>
    <string name="restaurant_detail_layout_eingetragene_gerichte">eingetragene Gerichte</string>
    <string name="add_dish_layout_cancelbutton_text">Abbrechen</string>
    <string name="add_dish_layout_addbutton_text">Hinzufügen</string>
    <string name="add_dish_layout_Gericht_zum_Kommentar">Kommentar zum Gericht</string>
    <string name="add_dish_layout_radio_noinfo">Nicht angegeben</string>
    <string name="add_dish_layout_radio_yes">Ja</string>
    <string name="add_dish_layout_radio_no">Nein</string>
    <string name="waiting_string">Kurzen Moment ...</string>
    <string name="add_dish_add_photo">Photo hinzufügen</string>
    <string name="add_dish_add_name">Name des Gerichts</string>
    <string name="starting_screen_update_map">Standort zurücksetzen</string>
    <string name="restaurant_dishes_detail_add_dish">Gericht hinzufügen</string>
    <string name="restaurant_detail_rate_restaurant">Restaurant bewerten</string>
    <string name="noInternetCon_ger">Keine Verbindung</string>
    <string name="test">test</string>
    <string name="noPhone_ger">Telefon: Keine Nummer angegben</string>
    <string name="noWebsite_ger">Website: Keine Website angegben</string>

    <string name="name_ger">Name</string>
    <string name="email_ger">Em@il</string>
    <string name="password_ger">Passwort</string>
    <string name="alreadyAccLink_ger">Bereits einen Account?</string>
    <string name="createAcc_ger">Account erstellen</string>
    <string name="createAccLink_ger">Noch keinen Account?</string>
    <string name="loginAcc_ger">Anmelden</string>
    <string name="wrongDataLogin_ger">Anmeldung fehlgeschlagen. Bitte Versuchen Se es erneut</string>
    <string name="wrongDataSignup_ger">Anmeldung fehlgeschlagen. Bitte Versuchen Se es erneut</string>
    <string name="logout_ger">Logout</string>
    <string name="login_ger">Login</string>
    <string name="loggedInAs_ger">Angemeldet als:</string>

    <string name="pleaseLogIn_ger">Bitte melden Sie sich an</string>
    <string name="switchText_ger">Restaurant merken:</string>

    <plurals name="numberOfDishes_ger">
        <item quantity="one">eingetragenes Gericht</item>
        <item quantity="other">eingetragene Gerichte</item>
    </plurals>
</resources>
