<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/restaurant_detail_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:padding="5dp" />

    <!--Info layout  -->
    <LinearLayout
        android:id="@+id/restaurant_detail_linearlayout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/dark_green"
        android:orientation="vertical"
        android:layout_weight="0.2"
        android:padding="5dp">


        <TextView
            android:id="@+id/restaurant_detail_textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/waiting_string"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/restaurant_detail_textview_openinghours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/waiting_string" />

        <View style="@style/Divider"/>


        <TextView
            android:id="@+id/restaurant_detail_textview_telephonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:linksClickable="true"
            android:maxLines="1"
            android:text="@string/waiting_string"
            android:textColor="@color/blue"
            android:textSize="16sp" />
        <View style="@style/Divider"/>


        <TextView
            android:id="@+id/restaurant_detail_textview_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/waiting_string" />

        <View style="@style/Divider"/>

        <Switch
            android:id="@+id/restaurant_detail_favswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchText_ger"
            android:textSize="16sp"/>


    </LinearLayout>

    <!--Dish adding layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/restaurant_detail_dishlayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:layout_margin="15dp"
        android:outlineProvider="bounds">

        <TextView
            android:id="@+id/restaurant_detail_dishcounter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/restaurant_detail_layout_eingetragene_gerichte"
            android:textSize="20dp" />

        <Button
            android:id="@+id/restaurant_detail_dishaddbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/bright_blue"

            android:text="+" />

    </LinearLayout>

    <!--Goolge Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:orientation="vertical">
    <TextView
        android:id="@+id/restaurant_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/yellow"
        android:padding="5dp"
        android:text="Google+ Bewertungen"
        android:textSize="20dp" />


    <ListView
        android:id="@+id/restaurant_detail_commentlistview"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent">


    </ListView>
    </LinearLayout>


</LinearLayout>